--- a/ti/kit/index.html
+++ b/ti/kit/index.html
@@ -32,7 +32,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-info/blob/aa439e40f08027e60c76a5bd756adad2f6c3df74/ti/kit/__init__.py#L1-L4" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-info/blob/4f8bcf3cb864035c1e0109327b2b3b7bc37e3ecd/ti/kit/__init__.py#L1-L4" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 # Toolkit
@@ -60,6 +60,10 @@ crossorigin>
 <div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="ti.kit.pdocs" href="pdocs.html">ti.kit.pdocs</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
+<dt><code class="name"><a title="ti.kit.repo" href="repo.html">ti.kit.repo</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
@@ -147,6 +151,7 @@ setTimeout(() => input.focus(), 100);
 <li><code><a title="ti.kit.generic" href="generic.html">ti.kit.generic</a></code></li>
 <li><code><a title="ti.kit.helpers" href="helpers.html">ti.kit.helpers</a></code></li>
 <li><code><a title="ti.kit.pdocs" href="pdocs.html">ti.kit.pdocs</a></code></li>
+<li><code><a title="ti.kit.repo" href="repo.html">ti.kit.repo</a></code></li>
 <li><code><a title="ti.kit.timestamp" href="timestamp.html">ti.kit.timestamp</a></code></li>
 </ul>
 </li>
