--- a/ti/index.html
+++ b/ti/index.html
@@ -48,7 +48,7 @@ to publish its textual corpora in the way of texts plus web annotations.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-info/blob/84b88341b443e1912642609283263f5618fb06c5/ti/__init__.py#L1-L3" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-info/blob/835b7288f86c5b02336e7d8ccac7e1e63d85207f/ti/__init__.py#L1-L3" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 .. include:: docs/main/top.md
@@ -65,6 +65,10 @@ to publish its textual corpora in the way of texts plus web annotations.</p>
 <dt><code class="name"><a title="ti.cheatsheet" href="cheatsheet.html">ti.cheatsheet</a></code></dt>
 <dd>
 <div class="desc"><p>TEI import …</p></div>
+</dd>
+<dt><code class="name"><a title="ti.cli" href="cli/index.html">ti.cli</a></code></dt>
+<dd>
+<div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="ti.info" href="info/index.html">ti.info</a></code></dt>
 <dd>
@@ -158,6 +162,7 @@ setTimeout(() => input.focus(), 100);
 <ul>
 <li><code><a title="ti.about" href="about/index.html">ti.about</a></code></li>
 <li><code><a title="ti.cheatsheet" href="cheatsheet.html">ti.cheatsheet</a></code></li>
+<li><code><a title="ti.cli" href="cli/index.html">ti.cli</a></code></li>
 <li><code><a title="ti.info" href="info/index.html">ti.info</a></code></li>
 <li><code><a title="ti.kit" href="kit/index.html">ti.kit</a></code></li>
 <li><code><a title="ti.parameters" href="parameters.html">ti.parameters</a></code></li>
